[CB] Refactor :
  - 이외 사용하지 않는 Text 삭제
  - 토큰의 값 조작했을 가능성 배제 코드 추가